# minimono

./: .gitignore  LICENSE  README.md  mcc_local_groups.json  monobank.py  monobank_legacy.py  pyproject.toml
.github/workflows/: ci.yml
API/: __init__.py  api_call.py  client.py  enumerators.py  exceptions.py  models.py  utility.py
minimono/: __init__.py  main.py
minimono/API/: __init__.py  api_call.py  client.py  enumerators.py  mcc_local.json  models.py  utility.py
minimono/abstract/: __init__.py  caller_elements.py
minimono/models/: __init__.py  enumerators.py  models.py  utility.py
monobank/: api_call.py  client.py  client_old.py  exceptions.py  mcc_groups_localized.json
tests/: strategies.py  test_client.py  test_schemas.py
